objects/TEACstmrProfile__A_Customer_Profile__c.object
<CustomObject>
    <description>Customer profile for &quot;A&quot; customers.</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to C2S Account Plan object which is used to populate A Customer profile.  Should be populated by code which copies Account Plan data to A Customer profile.</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>&quot;A&quot; Customer Profiles</relationshipLabel>
        <relationshipName>TEACstmrProfile_A_Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Account_Definition__c</fullName>
        <inlineHelpText>Please specify if this A Customer is based on accounts included in a GAM Code, a Worldwide Account Nbr or some other custom grouping of accounts. Note that if the Custom option is selected, no automatic gathering of actuals in the future will be possible.</inlineHelpText>
        <label>Account Definition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GAM Code</fullName>
                </value>
                <value>
                    <fullName>Worldwide Account Number</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Account_Objective_1__c</fullName>
        <inlineHelpText>What are the goals for this account?</inlineHelpText>
        <label>Account Objective 1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Account_Objective_2__c</fullName>
        <label>Account Objective 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Account_Objective_3__c</fullName>
        <label>Account Objective 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Unlocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Monthly_Update_Last_Updated_By_Nme__c</fullName>
        <description>Monthly Update Last Updated by Name from BU Org. 
The name of the user who last updated the Monthly Update section.
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Monthly Update Last Updated By Nme</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Monthly_Update_Last_Updated__c</fullName>
        <description>Monthly Update Last Updated in the BU Org.
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Monthly Update Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Profile_Last_Modified__c</fullName>
        <description>A Customer Profile Last Modified date in the BU Org. 
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Profile Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Profile_Last_Modified_by_Name__c</fullName>
        <description>A Customer Profile Last Modified by Name from the BU Org. 
The name of the user who last modified the profile in the BU Org. 
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Profile Last Modified by Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Profile_Owner_Email__c</fullName>
        <description>A Customer Profile Owner&apos;s Email from the BU Org. 
The email addr of the user who is the owner of the profile in the BU Org. 
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Profile Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Profile_Owner_Name__c</fullName>
        <description>A Customer Profile Owner Name from the BU Org. 
The name of the user who is the owner of the profile in the BU Org. 
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Profile Owner Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Revenue_Section_Last_UpdatedBy_Nme__c</fullName>
        <description>Name of the user who last updated the Revenue Section in the BU Org. 
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Revenue Section Last UpdatedBy Nme</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BUOrg_Revenue_Section_Last_Updated__c</fullName>
        <description>Revenue Section Last Updated timestamp in the BU Org. 
This field used for Profiles coming from BU Orgs only.</description>
        <label>BUOrg Revenue Section Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Customer_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ID of the Industry/Business Unit Overview that this &apos;A&apos; Customer Profile falls under.</inlineHelpText>
        <label>BU Customer Plan</label>
        <referenceTo>TEACstmrProfile__BU_Customer_Plan__c</referenceTo>
        <relationshipLabel>&quot;A&quot; Customer Profiles</relationshipLabel>
        <relationshipName>Business_Unit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Editor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Content Editor of Customer Profiles for the Business Unit</description>
        <inlineHelpText>Content Editor of Customer Profiles for the Business Unit</inlineHelpText>
        <label>BU Editor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>A_Customer_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_CY_Forecast_M__c</fullName>
        <inlineHelpText>Current Year WIP BU Forecast in Millions</inlineHelpText>
        <label>BU Revenue CY Forecast M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_1_M__c</fullName>
        <inlineHelpText>Plan Year+1 Forecasted Revenue for this BU in Millions</inlineHelpText>
        <label>BU Revenue Fcst Plan Yr+1 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_4_M__c</fullName>
        <inlineHelpText>Plan Year+4 Forecasted Revenue for this BU in Millions</inlineHelpText>
        <label>BU Revenue Fcst Plan Yr+4 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_M__c</fullName>
        <inlineHelpText>Plan Year Forecasted Revenue for this BU in Millions</inlineHelpText>
        <label>BU Revenue Fcst Plan Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_Pct_Change_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_M__c), 0,
			IF(TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_M__c = 0 , 0,
			(TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_1_M__c / TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Revenue Pct Change Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_Pct_Change_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_1_M__c), 0,
			IF(TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_1_M__c = 0 , 0,
			(TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_4_M__c / TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_1_M__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Revenue Pct Change Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_Pct_Change_Plan_Yr__c</fullName>
        <formula>IF (ISNULL(TEACstmrProfile__BU_Revenue_Prior_Yr_Actual_M__c), 0,
			IF(TEACstmrProfile__BU_Revenue_Prior_Yr_Actual_M__c = 0 , 0,
			(TEACstmrProfile__BU_Revenue_Fcst_Plan_Yr_M__c / TEACstmrProfile__BU_Revenue_Prior_Yr_Actual_M__c) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU_Revenue_Pct_Change_Plan_Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_Prior_Yr_Actual_M__c</fullName>
        <inlineHelpText>Prior Year Actual BU Revenue in Millions (direct and/or indirect based on the Sales Figure Makeup specified in the account plan definition section) .</inlineHelpText>
        <label>BU Revenue Prior Yr Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__BU_Revenue_YTD_Actual_M__c</fullName>
        <inlineHelpText>YTD Actual BU Revenue in Millions</inlineHelpText>
        <label>BU Revenue YTD Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Pgm_1_Comments__c</fullName>
        <label>Breakthrough Pgm 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Pgm_1_Status__c</fullName>
        <label>Breakthrough Pgm 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive momentum</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Negative momentum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Pgm_2_Comments__c</fullName>
        <label>Breakthrough Pgm 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Pgm_2_Status__c</fullName>
        <label>Breakthrough Pgm 2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive momentum</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Negative momentum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Pgm_3_Comments__c</fullName>
        <label>Breakthrough Pgm 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Pgm_3_Status__c</fullName>
        <label>Breakthrough Pgm 3 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive momentum</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Negative momentum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Program_1__c</fullName>
        <inlineHelpText>What are the major technology innovations for this customer?</inlineHelpText>
        <label>Breakthrough Program 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Program_2__c</fullName>
        <label>Breakthrough Program 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Breakthrough_Program_3__c</fullName>
        <label>Breakthrough Program 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Circuit Protection</fullName>
                </value>
                <value>
                    <fullName>Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>Data Communications</fullName>
                </value>
                <value>
                    <fullName>Distribution Channel</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Telecom Networks</fullName>
                </value>
                <value>
                    <fullName>Touch Solutions</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
                <value>
                    <fullName>Demo Chip to Board</fullName>
                </value>
                <value>
                    <fullName>Demo SmarTran Networks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category1_Name__c</fullName>
        <inlineHelpText>Name of Customer Revenue major grouping. This could represent products, industry, etc…</inlineHelpText>
        <label>Category1 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category1_Rev_Pct_Chg_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(TEACstmrProfile__Category1_Revenue_M_Plan_Yr_2__c), 0,
			IF(TEACstmrProfile__Category1_Revenue_M_Plan_Yr_2__c = 0 , 0,
			(TEACstmrProfile__Category1_Revenue_M_Plan_Yr_1__c / TEACstmrProfile__Category1_Revenue_M_Plan_Yr_2__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category1 Rev Pct Chg Plan Yr-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category1_Rev_Pct_Chg_Plan_Yr_2__c</fullName>
        <formula>IF (ISNULL(TEACstmrProfile__Category1_Revenue_M_Plan_Yr_3__c), 0,
			IF(TEACstmrProfile__Category1_Revenue_M_Plan_Yr_3__c = 0 , 0,
			(TEACstmrProfile__Category1_Revenue_M_Plan_Yr_2__c / TEACstmrProfile__Category1_Revenue_M_Plan_Yr_3__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category1 Rev Pct Chg Plan Yr-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category1_Revenue_M_Plan_Yr_1__c</fullName>
        <label>Category1 Revenue M Plan Yr-1</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category1_Revenue_M_Plan_Yr_2__c</fullName>
        <label>Category1 Revenue M Plan Yr-2</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category1_Revenue_M_Plan_Yr_3__c</fullName>
        <label>Category1 Revenue M Plan Yr-3</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category2_Name__c</fullName>
        <label>Category2 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category2_Rev_Pct_Chg_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(TEACstmrProfile__Category2_Revenue_M_Plan_Yr_2__c), 0,
			IF(TEACstmrProfile__Category2_Revenue_M_Plan_Yr_2__c = 0 , 0,
			(TEACstmrProfile__Category2_Revenue_M_Plan_Yr_1__c / TEACstmrProfile__Category2_Revenue_M_Plan_Yr_2__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category2 Rev Pct Chg Plan Yr-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Category3_Name__c</fullName>
        <label>Category3 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_1_Comments__c</fullName>
        <label>Competitor 1 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_1_MS_Trend__c</fullName>
        <inlineHelpText>What direction is the Market Share for this competitor trending?</inlineHelpText>
        <label>Competitor 1 MS Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_1_Market_Share__c</fullName>
        <inlineHelpText>Percent of Market Share that this competitor holds. Enter a 3 digit percentage value with no decimal places.</inlineHelpText>
        <label>Competitor 1 Market Share</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_1__c</fullName>
        <inlineHelpText>Competitor Name</inlineHelpText>
        <label>Competitor 1</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_2_Comments__c</fullName>
        <label>Competitor 2 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_2_MS_Trend__c</fullName>
        <label>Competitor 2 MS Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_2_Market_Share__c</fullName>
        <label>Competitor 2 Market Share</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_2__c</fullName>
        <label>Competitor 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_3_Comments__c</fullName>
        <label>Competitor 3 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_3_MS_Trend__c</fullName>
        <label>Competitor 3 MS Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_3_Market_Share__c</fullName>
        <label>Competitor 3 Market Share</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Competitor_3__c</fullName>
        <label>Competitor 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Content_Owner__c</fullName>
        <description>Name of person who &quot;owns&quot; the content</description>
        <inlineHelpText>Name of person who &quot;owns&quot; the content</inlineHelpText>
        <label>Content Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Customer_Scorecard_Comments__c</fullName>
        <label>Customer Scorecard Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Customer_Scorecard__c</fullName>
        <inlineHelpText>URL to a Scorecard Site or file</inlineHelpText>
        <label>Customer Scorecard</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Customer_Type__c</fullName>
        <inlineHelpText>&quot;A&quot; Customer Profiles will be sent to the Executive Dashboard once approved.  All other types will not be sent to the Dashboard.</inlineHelpText>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A Customer</fullName>
                    <default>true</default>
                    <label>A Customer</label>
                </value>
                <value>
                    <fullName>B Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Engineering_Relationship_Comments__c</fullName>
        <label>Engineering Relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Engineering_Relationship__c</fullName>
        <label>Engineering Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Executive_Relationship_Comments__c</fullName>
        <label>Executive Relationship Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Executive_Relationship__c</fullName>
        <label>Executive Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growing</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Declining</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__GAM_Code__c</fullName>
        <inlineHelpText>GAM Code in which accounts for this A Customer are
			included.</inlineHelpText>
        <label>GAM Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Gross_Margin_Pct_Plan_Yr_1__c</fullName>
        <label>Gross Margin Pct Plan Yr+1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Gross_Margin_Pct_Plan_Yr_4__c</fullName>
        <label>Gross Margin Pct Plan Yr+4</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Gross_Margin_Pct_Plan_Yr__c</fullName>
        <label>Gross Margin Pct Plan Yr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Gross_Margin_Pct_Prior_Yr__c</fullName>
        <label>Gross Margin Pct Prior Yr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Hidden_Do_Not_Use__c</fullName>
        <label>Hidden_Do_Not-Use</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Industry_Segment__c</fullName>
        <inlineHelpText>Industry Segment designation should reflect the TE industry view of this customer (ie. DataCenter, Touch - retail, Touch - medical, Marine, Aerospace, etc). 
Multiple industries may be specified.</inlineHelpText>
        <label>Industry Segment</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Integration_BU_Org_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Format:  BU_Org_Id  &amp; &quot;/ &quot; &amp;  BU_A_Customer_Profile_Record_ID</description>
        <externalId>true</externalId>
        <label>Integration BU Org Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Integration_Last_Update_Date__c</fullName>
        <description>Date that the profile was last updated from the BU org via Cast Iron integration.</description>
        <label>Integration Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Is_Updated_Since_Last_Integration__c</fullName>
        <description>Compare last modified date with last integration update date. If record has been modified since last integration date, return &quot;true&quot;, otherwise value is &quot;false&quot;.</description>
        <formula>IF (LastModifiedDate &gt; TEACstmrProfile__Integration_Last_Update_Date__c , &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Updated Since Last Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_1_Outlook__c</fullName>
        <label>Key Product 1 Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_1_Pct__c</fullName>
        <label>Key Product 1 Pct</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_1__c</fullName>
        <label>Key Product 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_2_Outlook__c</fullName>
        <label>Key Product 2 Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_2_Pct__c</fullName>
        <label>Key Product 2 Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_2__c</fullName>
        <label>Key Product 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_3_Outlook__c</fullName>
        <label>Key Product 3 Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_3_Pct__c</fullName>
        <label>Key Product 3 Pct</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_3__c</fullName>
        <label>Key Product 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Key_Product_Percent_Title__c</fullName>
        <inlineHelpText>Specify whether you are supplying percentages for Market Share or for Revenue Mix.</inlineHelpText>
        <label>Key Product Percent Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market Share Percent</fullName>
                </value>
                <value>
                    <fullName>Revenue Mix Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>